--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-input-mask": "^2.0.4",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "sweetalert2": "^11.4.18",
